[gd_scene load_steps=9 format=2]

[ext_resource path="res://GUI/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://art/background.png" type="Texture" id=4]
[ext_resource path="res://fonts/SpaceMono-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 5 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 480, 272 )
scale = Vector2( 15, 8.5 )
texture = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = 940.0
margin_bottom = 520.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 240.0
margin_top = 30.0
margin_right = 680.0
margin_bottom = 470.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 100
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 440.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "VRUNNER"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 440.0
margin_bottom = 292.0
custom_constants/separation = 40
alignment = 1

[node name="PlayButton" parent="CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 8.0
margin_right = 200.0

[node name="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/PlayButton" index="0"]
custom_fonts/font = SubResource( 2 )
text = "PLAY"

[node name="TutorialButton" parent="CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 240.0
margin_right = 432.0

[node name="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/TutorialButton" index="0"]
custom_fonts/font = SubResource( 3 )
text = "TUTORIAL"

[node name="Credits" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 392.0
margin_right = 440.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "BY JACOB WHITE - 1.0.0"
align = 1
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_button_pressed" binds= [ "play" ]]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/TutorialButton" to="." method="_on_button_pressed" binds= [ "tutorial" ]]

[editable path="CenterContainer/VBoxContainer/HBoxContainer/PlayButton"]

[editable path="CenterContainer/VBoxContainer/HBoxContainer/TutorialButton"]
